Rename transfer port